--- a/portfolio.html
+++ b/portfolio.html
@@ -27,15 +27,15 @@
             <li><button type="button">Marketing</button></li>
         </ul>
         <ul>
-            <li><img src="./images/Technoduck.jpg"alt="Technoduck"width=390 height="294"><h3>Technoduck</h3><span>Web-site/span></li>
-            <li><img src="./images/Poster New Orlean vs Golden Star.jpg" alt="Poster New Orlean vs Golden Star"width=390 height="294"><h3>Poster New Orlean vs Golden Star</h3><span>Design</span></li>
-            <li><img src="./images/Seafood Restaurant.jpg" alt="Seafood Restaurant"width=390 height="294"><h3>Seafood Restaurant</h3><span>Apps</span></li>
-            <li><img src="./images/Project Prime.jpg" alt="Project Prime"width=390 height="294"><h3>Project Prime</h3><span>Marketing</span></li>
-            <li><img src="./images/Project Boxes.jpg" alt="Project Boxes"width=390 height="294"><h3>Project Boxes</h3><span>Apps</span></li>
-            <li><img src="./images/Inspiration has no Borders.jpg" alt="Inspiration has no Borders"width=390 height="294"><h3>Inspiration has no Borders</h3><span>Web-site</span></li>
-            <li><img src="./images/Limited Edition.jpg" alt="Limited Edition"width=390 height="294"><h3>Limited Edition</h3><span>Design</span></li>
-            <li><img src="./images/Project LAB.jpg" alt="Project LAB"width=390 height="294"><h3>Project LAB</h3><span>Marketing</span></li>
-            <li><img src="./images/Growing Business.jpg" alt="Growing Business"width=390 height="294"><h3>Growing Business</h3><span>Apps</span></li>
+            <li><img src="./images/Technoduck.jpg" alt="Technoduck" width=390 height="294"><h3>Technoduck</h3><span>Web-site</span></li>
+            <li><img src="./images/Poster-New-Orlean-vs-Golden-Star.jpg" alt="Poster New Orlean vs Golden Star" width=390 height="294"><h3>Poster New Orlean vs Golden Star</h3><span>Design</span></li>
+            <li><img src="./images/Seafood-Restaurant.jpg" alt="Seafood Restaurant" width=390 height="294"><h3>Seafood Restaurant</h3><span>Apps</span></li>
+            <li><img src="./images/Project-Prime.jpg" alt="Project Prime" width=390 height="294"><h3>Project Prime</h3><span>Marketing</span></li>
+            <li><img src="./images/Project-Boxes.jpg" alt="Project Boxes" width=390 height="294"><h3>Project Boxes</h3><span>Apps</span></li>
+            <li><img src="./images/Inspiration-has-no-Borders.jpg" alt="Inspiration has no Borders" width=390 height="294"><h3>Inspiration has no Borders</h3><span>Web-site</span></li>
+            <li><img src="./images/Limited-Edition.jpg" alt="Limited Edition" width=390 height="294"><h3>Limited Edition</h3><span>Design</span></li>
+            <li><img src="./images/Project-LAB.jpg" alt="Project LAB" width=390 height="294"><h3>Project LAB</h3><span>Marketing</span></li>
+            <li><img src="./images/Growing-Business.jpg" alt="Growing Business" width=390 height="294"><h3>Growing Business</h3><span>Apps</span></li>
         </ul>
     </main>
     <footer>
